# ddc_brightness

./: Cargo.toml  Makefile  PKGBUILD  README.md  ddc_brightness.desktop
.github/workflows/: build.yml
docs/: specs.md
src/: main.rs
src/ddc/: brightness.rs  detect.rs  mod.rs  parser.rs
src/models/: monitor.rs
src/ui/: window.rs
