[package]
name = "ddc_brightness"
version = "0.1.2"
edition = "2021"

[dependencies]
adw = { package = "libadwaita", version = "0.9" }
gtk = { package = "gtk4", version = "0.11" }
glib = { package = "glib", version = "0.22" }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = 3
